--- a/_config.yml
+++ b/_config.yml
@@ -25,17 +25,17 @@ author:
   name             : "Arghyadeb Roy"
   pronouns         : "he/him"  
   bio              : "আমি অর্ঘ্য"
-  location         : "Earth"
-  employer         : "CASSUM-CICO-VICO"
+  location         : "India"
+  employer         : "IISER Kolkata"
   uri              : "https://arghyadebroy.github.io/"
-  email            : "none@example.org" 
+  email            : "aroy.astro@gmail.com, ar20ms146@iiserkol.ac.in"  
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # URL
   impactstory      : # URL
   orcid            : "https://orcid.org/0009-0005-7673-2835"
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Arghyadeb-Roy"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
