--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ locale                   : "en-US"
 title                    : "Arghyadeb Roy"
 title_separator          : "-"
 name                     : &name "Arghyadeb Roy"
-description              : &description "Discipline: Quantum Chemistry, Computational Chemistry, Astrochemistry, Astrophysics"
+description              : &description ""
 url                      : https://arghyadebroy.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "arghyadebroy/arghyadebroy.github.io"
@@ -24,7 +24,7 @@ author:
   avatar           : "Roy.jpeg"
   name             : "Arghyadeb Roy"
   pronouns         : "he/him"  
-  bio              : "আমি অর্ঘ্য"
+  bio              : "Discipline: Quantum Chemistry, Computational Chemistry, Astrochemistry, Astrophysics""
   location         : "India"
   employer         : "IISER Kolkata"
   uri              : "https://arghyadebroy.github.io/"
