--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "Roy.jpeg"
   name             : "Arghyadeb Roy"
   pronouns         : "he/him"  
-  bio              : "Discipline: Quantum Chemistry, Computational Chemistry, Astrochemistry, Astrophysics"
+  bio              : "Discipline: Computational Chemistry, Quantum Chemistry, Astrochemistry, Astrophysics"
   location         : "India"
   employer         : "IISER Kolkata"
   uri              : "https://arghyadebroy.github.io/"
