--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Arghyadeb Roy"
 title_separator          : "-"
 name                     : &name "Arghyadeb Roy"
 description              : &description ""
-url                      : https://arghyadebroy.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://arghyadebroy.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "arghyadebroy/arghyadebroy.github.io"
 
