--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "India"
   employer         : "IISER Kolkata"
   uri              : "https://arghyadebroy.github.io/"
-  email            : "aroy.astro@gmail.com, ar20ms146@iiserkol.ac.in"  
+  email            : "aroy.astro@gmail.com"  
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
