--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,16 +6,16 @@
 
 main:
   - title: "Publications"
-    url: /publications/
-
+    url: /#publications
+    
   - title: "Talks"
-    url: /talks/    
-
+    url: /#talks    
+    
   - title: "Teaching"
-    url: /teaching/    
+    url: /#teaching    
     
   - title: "Portfolio"
-    url: /portfolio/
+    url: /#portfolio
     
   - title: "CV"
-    url: /cv/
+    url: /#cv
