--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Arghyadeb Roy Space"
+title                    : "Arghyadeb Roy | Home"
 title_separator          : "-"
 name                     : &name "Arghyadeb Roy"
 description              : &description ""
